--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "subhosting"
 version = "0.0.1-alpha.0"
-description = "The official Python library for the subhosting API"
+description = "The official Python library for the Deno Deploy Subhosting deployment and code execution API"
 readme = "README.md"
 license = "MIT"
 authors = [
