--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "subhosting"
 version = "0.1.0-alpha.1"
-description = "The official Python library for the subhosting API"
+description = "The official Deno Deploy Subhosting REST API client for Python"
 readme = "README.md"
 license = "MIT"
 authors = [
